src/mongo/s/mongos_main.cpp
@@ -321,6 +321,12 @@ void cleanupTask(const ShutdownTaskArgs& shutdownArgs) {
                 LOGV2(4701800, "pauseWhileKillingOperationsAtShutdown failpoint enabled");
                 sleepsecs(1);
             }
+            FailPoint* hangBeforeInterruptfailPoint =
+                globalFailPointRegistry().find("hangBeforeCheckingMongosShutdownInterrupt");
+            if (hangBeforeInterruptfailPoint) {
+                hangBeforeInterruptfailPoint->setMode(FailPoint::Mode::off);
+                sleepsecs(3);
+            }
         }
 
         // Perform all shutdown operations after setKillAllOperations is called in order to ensure
